--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="https://roman2013lkj.github.io/lkjil/">Главная</a>
     </header>
     <main>
       <h1>Мои сайты</h1>
